docs/apache-airflow-providers-amazon/2.3.0/_sources/_api/airflow/providers/amazon/aws/sensors/eks/index.rst.txt
:mod:`airflow.providers.amazon.aws.sensors.eks`
===============================================

.. py:module:: airflow.providers.amazon.aws.sensors.eks

.. autoapi-nested-parse::

   Tracking the state of Amazon EKS Clusters, Amazon EKS managed node groups, and AWS Fargate profiles.



Module Contents
---------------

.. data:: DEFAULT_CONN_ID
   :annotation: = aws_default

   

.. data:: CLUSTER_TERMINAL_STATES
   

   

.. data:: FARGATE_TERMINAL_STATES
   

   

.. data:: NODEGROUP_TERMINAL_STATES
   

   

.. data:: UNEXPECTED_TERMINAL_STATE_MSG
   :annotation: = Terminal state reached. Current state: {current_state}, Expected state: {target_state}

   

.. py:class:: EKSClusterStateSensor(*, cluster_name: str, target_state: ClusterStates = ClusterStates.ACTIVE, aws_conn_id: str = DEFAULT_CONN_ID, region: Optional[str] = None, **kwargs)

   Bases: :class:`airflow.sensors.base.BaseSensorOperator`

   Check the state of an Amazon EKS Cluster until it reaches the target state or another terminal state.

   :param cluster_name: The name of the Cluster to watch. (templated)
   :type cluster_name: str
   :param target_state: Target state of the Cluster. (templated)
   :type target_state: ClusterStates
   :param region: Which AWS region the connection should use. (templated)
       If this is None or empty then the default boto3 behaviour is used.
   :type region: str
   :param aws_conn_id: The Airflow connection used for AWS credentials. (templated)
        If this is None or empty then the default boto3 behaviour is used. If
        running Airflow in a distributed manner and aws_conn_id is None or
        empty, then the default boto3 configuration would be used (and must be
        maintained on each worker node).
   :type aws_conn_id: str

   .. attribute:: template_fields
      :annotation: = ['cluster_name', 'target_state', 'aws_conn_id', 'region']

      

   .. attribute:: ui_color
      :annotation: = #ff9900

      

   .. attribute:: ui_fgcolor
      :annotation: = #232F3E

      

   
   .. method:: poke(self, context)




.. py:class:: EKSFargateProfileStateSensor(*, cluster_name: str, fargate_profile_name: str, target_state: FargateProfileStates = FargateProfileStates.ACTIVE, aws_conn_id: str = DEFAULT_CONN_ID, region: Optional[str] = None, **kwargs)

   Bases: :class:`airflow.sensors.base.BaseSensorOperator`

   Check the state of an AWS Fargate profile until it reaches the target state or another terminal state.

   :param cluster_name: The name of the Cluster which the AWS Fargate profile is attached to. (templated)
   :type cluster_name: str
   :param fargate_profile_name: The name of the Fargate profile to watch. (templated)
   :type fargate_profile_name: str
   :param target_state: Target state of the Fargate profile. (templated)
   :type target_state: FargateProfileStates
   :param region: Which AWS region the connection should use. (templated)
       If this is None or empty then the default boto3 behaviour is used.
   :type region: str
   :param aws_conn_id: The Airflow connection used for AWS credentials. (templated)
        If this is None or empty then the default boto3 behaviour is used. If
        running Airflow in a distributed manner and aws_conn_id is None or
        empty, then the default boto3 configuration would be used (and must be
        maintained on each worker node).
   :type aws_conn_id: str

   .. attribute:: template_fields
      :annotation: = ['cluster_name', 'fargate_profile_name', 'target_state', 'aws_conn_id', 'region']

      

   .. attribute:: ui_color
      :annotation: = #ff9900

      

   .. attribute:: ui_fgcolor
      :annotation: = #232F3E

      

   
   .. method:: poke(self, context)




.. py:class:: EKSNodegroupStateSensor(*, cluster_name: str, nodegroup_name: str, target_state: NodegroupStates = NodegroupStates.ACTIVE, aws_conn_id: str = DEFAULT_CONN_ID, region: Optional[str] = None, **kwargs)

   Bases: :class:`airflow.sensors.base.BaseSensorOperator`

   Check the state of an EKS managed node group until it reaches the target state or another terminal state.

   :param cluster_name: The name of the Cluster which the Nodegroup is attached to. (templated)
   :type cluster_name: str
   :param nodegroup_name: The name of the Nodegroup to watch. (templated)
   :type nodegroup_name: str
   :param target_state: Target state of the Nodegroup. (templated)
   :type target_state: NodegroupStates
   :param region: Which AWS region the connection should use. (templated)
       If this is None or empty then the default boto3 behaviour is used.
   :type region: str
   :param aws_conn_id: The Airflow connection used for AWS credentials. (templated)
        If this is None or empty then the default boto3 behaviour is used. If
        running Airflow in a distributed manner and aws_conn_id is None or
        empty, then the default boto3 configuration would be used (and must be
        maintained on each worker node).
   :type aws_conn_id: str

   .. attribute:: template_fields
      :annotation: = ['cluster_name', 'nodegroup_name', 'target_state', 'aws_conn_id', 'region']

      

   .. attribute:: ui_color
      :annotation: = #ff9900

      

   .. attribute:: ui_fgcolor
      :annotation: = #232F3E

      

   
   .. method:: poke(self, context)




